docker execution profil and instructions

--- a/Anki.csproj
+++ b/Anki.csproj
@@ -10,17 +10,11 @@
     <ProjectGuid>{74371053-4CA1-4C4F-90BE-BDA13375346A}</ProjectGuid>
     <StartupObject>Anki.Program</StartupObject>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
   <ItemGroup>
     <None Remove=".gitignore" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="deck.txt">
+    <None Update="datastore\deck.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
